src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_cast_invalid_int_boolean.deca
// test invalide de la règle cast



{
    boolean a = true;
    (int) (a);
}